src/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | CLASS IDENTIFIER
  11       | Type '[' ']'

  12  ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}'
  13           | SEALED CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  14  ExtendsClause : EXTENDS IDENTIFIER
  15                |

  16  FieldList : FieldList VariableDef
  17            | FieldList FunctionDef
  18            |

  19  Formals : VariableList
  20          |

  21  VariableList : VariableList ',' Variable
  22               | Variable

  23  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  24              | Type IDENTIFIER '(' Formals ')' StmtBlock

  25  StmtBlock : '{' StmtList '}'

  26  StmtList : StmtList Stmt
  27           |

  28  Stmt : VariableDef
  29       | SimpleStmt ';'
  30       | IfStmt
  31       | WhileStmt
  32       | ForStmt
  33       | ReturnStmt ';'
  34       | PrintStmt ';'
  35       | BreakStmt ';'
  36       | StmtBlock
  37       | OCStmt ';'
  38       | GuardedStmt
  39       | ForeachStmt

  40  ForeachStmt : FOREACH '(' BoundVariable IN Expr BoolExprForeach ')' Stmt

  41  BoundVariable : VAR IDENTIFIER
  42                | Variable

  43  BoolExprForeach : WHILE Expr
  44                  |

  45  GuardedStmt : IF '{' GuardMiddleExpr '}'

  46  GuardMiddleExpr : IfBranch IfSubStmt
  47                  |

  48  IfBranch : IfBranch IfSubStmt GUARDOR
  49           |

  50  IfSubStmt : Expr ':' Stmt

  51  OCStmt : SCOPY '(' IDENTIFIER ',' Expr ')'

  52  SimpleStmt : LValue '=' Expr
  53             | Call
  54             |

  55  Receiver : Expr '.'
  56           |

  57  LValue : Receiver IDENTIFIER
  58         | Expr '[' Expr ']'
  59         | VAR IDENTIFIER

  60  Call : Receiver IDENTIFIER '(' Actuals ')'

  61  Expr : LValue
  62       | Call
  63       | Constant
  64       | '[' Expr FOR IDENTIFIER IN Expr BoolExprForComp ']'
  65       | Expr '[' Expr ']' DEFAULT Expr
  66       | Expr '[' RangeExpr ']'
  67       | Expr '+' Expr
  68       | Expr ARRAYCONCAT Expr
  69       | Expr ARRAYINIT Expr
  70       | Expr '-' Expr
  71       | Expr '*' Expr
  72       | Expr '/' Expr
  73       | Expr '%' Expr
  74       | Expr EQUAL Expr
  75       | Expr NOT_EQUAL Expr
  76       | Expr '<' Expr
  77       | Expr '>' Expr
  78       | Expr LESS_EQUAL Expr
  79       | Expr GREATER_EQUAL Expr
  80       | Expr AND Expr
  81       | Expr OR Expr
  82       | '(' Expr ')'
  83       | '-' Expr
  84       | '!' Expr
  85       | READ_INTEGER '(' ')'
  86       | READ_LINE '(' ')'
  87       | THIS
  88       | NEW IDENTIFIER '(' ')'
  89       | NEW Type '[' Expr ']'
  90       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  91       | '(' CLASS IDENTIFIER ')' Expr

  92  BoolExprForComp : IF Expr
  93                  |

  94  RangeExpr : Expr ':' Expr

  95  Constant : LITERAL
  96           | NULL
  97           | ArrayConstant

  98  ArrayConstant : '[' ConstantList ']'

  99  ConstantList : ConstantList ',' Constant
 100               | Constant
 101               |

 102  Actuals : ExprList
 103          |

 104  ExprList : ExprList ',' Expr
 105           | Expr

 106  WhileStmt : WHILE '(' Expr ')' Stmt

 107  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

 108  BreakStmt : BREAK

 109  IfStmt : IF '(' Expr ')' Stmt ElseClause

 110  ElseClause : ELSE Stmt
 111             |

 112  ReturnStmt : RETURN Expr
 113             | RETURN

 114  PrintStmt : PRINT '(' ExprList ')'

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	SEALED  shift 2
	.  error

	Program  goto 3
	ClassList  goto 4
	ClassDef  goto 5


state 1
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	IDENTIFIER  shift 6
	.  error


state 2
	ClassDef : SEALED . CLASS IDENTIFIER ExtendsClause '{' FieldList '}'  (13)

	CLASS  shift 7
	.  error


state 3
	$accept : Program . $end  (0)

	$end  accept


state 4
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	SEALED  shift 2
	$end  reduce 1

	ClassDef  goto 8


state 5
	ClassList : ClassDef .  (3)

	.  reduce 3


state 6
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (12)
	ExtendsClause : .  (15)

	EXTENDS  shift 9
	'{'  reduce 15

	ExtendsClause  goto 10


state 7
	ClassDef : SEALED CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (13)

	IDENTIFIER  shift 11
	.  error


state 8
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 9
	ExtendsClause : EXTENDS . IDENTIFIER  (14)

	IDENTIFIER  shift 12
	.  error


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (12)

	'{'  shift 13
	.  error


state 11
	ClassDef : SEALED CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (13)
	ExtendsClause : .  (15)

	EXTENDS  shift 9
	'{'  reduce 15

	ExtendsClause  goto 14


state 12
	ExtendsClause : EXTENDS IDENTIFIER .  (14)

	.  reduce 14


state 13
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (12)
	FieldList : .  (18)

	.  reduce 18

	FieldList  goto 15


state 14
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (13)

	'{'  shift 16
	.  error


state 15
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (12)
	FieldList : FieldList . VariableDef  (16)
	FieldList : FieldList . FunctionDef  (17)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	STATIC  shift 22
	'}'  shift 23
	.  error

	VariableDef  goto 24
	Variable  goto 25
	Type  goto 26
	FunctionDef  goto 27


state 16
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (13)
	FieldList : .  (18)

	.  reduce 18

	FieldList  goto 28


state 17
	Type : VOID .  (7)

	.  reduce 7


state 18
	Type : BOOL .  (8)

	.  reduce 8


state 19
	Type : INT .  (6)

	.  reduce 6


state 20
	Type : STRING .  (9)

	.  reduce 9


state 21
	Type : CLASS . IDENTIFIER  (10)

	IDENTIFIER  shift 29
	.  error


state 22
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (23)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	.  error

	Type  goto 30


state 23
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (12)

	.  reduce 12


state 24
	FieldList : FieldList VariableDef .  (16)

	.  reduce 16


state 25
	VariableDef : Variable . ';'  (4)

	';'  shift 31
	.  error


state 26
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (24)

	IDENTIFIER  shift 32
	'['  shift 33
	.  error


state 27
	FieldList : FieldList FunctionDef .  (17)

	.  reduce 17


state 28
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (13)
	FieldList : FieldList . VariableDef  (16)
	FieldList : FieldList . FunctionDef  (17)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	STATIC  shift 22
	'}'  shift 34
	.  error

	VariableDef  goto 24
	Variable  goto 25
	Type  goto 26
	FunctionDef  goto 27


state 29
	Type : CLASS IDENTIFIER .  (10)

	.  reduce 10


state 30
	Type : Type . '[' ']'  (11)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 35
	'['  shift 33
	.  error


state 31
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 32
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (24)

	'('  shift 36
	';'  reduce 5


state 33
	Type : Type '[' . ']'  (11)

	']'  shift 37
	.  error


state 34
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (13)

	.  reduce 13


state 35
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 38
	.  error


state 36
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (24)
	Formals : .  (20)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	')'  reduce 20

	Variable  goto 39
	Type  goto 40
	Formals  goto 41
	VariableList  goto 42


state 37
	Type : Type '[' ']' .  (11)

	.  reduce 11


state 38
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (20)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	')'  reduce 20

	Variable  goto 39
	Type  goto 40
	Formals  goto 43
	VariableList  goto 42


state 39
	VariableList : Variable .  (22)

	.  reduce 22


state 40
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)

	IDENTIFIER  shift 44
	'['  shift 33
	.  error


state 41
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (24)

	')'  shift 45
	.  error


state 42
	Formals : VariableList .  (19)
	VariableList : VariableList . ',' Variable  (21)

	','  shift 46
	')'  reduce 19


state 43
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 47
	.  error


state 44
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 45
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (24)

	'{'  shift 48
	.  error

	StmtBlock  goto 49


state 46
	VariableList : VariableList ',' . Variable  (21)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	.  error

	Variable  goto 50
	Type  goto 40


state 47
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 48
	.  error

	StmtBlock  goto 51


state 48
	StmtBlock : '{' . StmtList '}'  (25)
	StmtList : .  (27)

	.  reduce 27

	StmtList  goto 52


state 49
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (24)

	.  reduce 24


state 50
	VariableList : VariableList ',' Variable .  (21)

	.  reduce 21


state 51
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 52
	StmtBlock : '{' StmtList . '}'  (25)
	StmtList : StmtList . Stmt  (26)
	SimpleStmt : .  (54)
	Receiver : .  (56)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	NULL  shift 53
	THIS  shift 54
	WHILE  shift 55
	FOR  shift 56
	IF  shift 57
	RETURN  shift 58
	BREAK  shift 59
	NEW  shift 60
	PRINT  shift 61
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	'{'  shift 48
	'}'  shift 70
	SCOPY  shift 71
	VAR  shift 72
	FOREACH  shift 73
	IDENTIFIER  reduce 56
	';'  reduce 54

	VariableDef  goto 74
	Variable  goto 25
	Type  goto 40
	StmtBlock  goto 75
	Stmt  goto 76
	SimpleStmt  goto 77
	IfStmt  goto 78
	WhileStmt  goto 79
	ForStmt  goto 80
	ReturnStmt  goto 81
	PrintStmt  goto 82
	BreakStmt  goto 83
	OCStmt  goto 84
	GuardedStmt  goto 85
	ForeachStmt  goto 86
	Expr  goto 87
	LValue  goto 88
	Call  goto 89
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 53
	Constant : NULL .  (96)

	.  reduce 96


state 54
	Expr : THIS .  (87)

	.  reduce 87


state 55
	WhileStmt : WHILE . '(' Expr ')' Stmt  (106)

	'('  shift 93
	.  error


state 56
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (107)

	'('  shift 94
	.  error


state 57
	GuardedStmt : IF . '{' GuardMiddleExpr '}'  (45)
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (109)

	'('  shift 95
	'{'  shift 96
	.  error


state 58
	ReturnStmt : RETURN . Expr  (112)
	ReturnStmt : RETURN .  (113)
	Receiver : .  (56)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	VAR  shift 72
	IDENTIFIER  reduce 56
	';'  reduce 113

	Expr  goto 97
	LValue  goto 98
	Call  goto 99
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 59
	BreakStmt : BREAK .  (108)

	.  reduce 108


state 60
	Expr : NEW . IDENTIFIER '(' ')'  (88)
	Expr : NEW . Type '[' Expr ']'  (89)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	IDENTIFIER  shift 100
	.  error

	Type  goto 101


state 61
	PrintStmt : PRINT . '(' ExprList ')'  (114)

	'('  shift 102
	.  error


state 62
	Expr : READ_INTEGER . '(' ')'  (85)

	'('  shift 103
	.  error


state 63
	Expr : READ_LINE . '(' ')'  (86)

	'('  shift 104
	.  error


state 64
	Constant : LITERAL .  (95)

	.  reduce 95


state 65
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (90)

	'('  shift 105
	.  error


state 66
	Expr : '-' . Expr  (83)
	Receiver : .  (56)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	VAR  shift 72
	IDENTIFIER  reduce 56
